Map Implementation - Risky Areas

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-women-safety/lib/screens/map/
+# women-safety/lib/screens/map/
 women-safety/lib/screens/game/
 women-safety/lib/services/
 women-safety/lib/models/
