--- a/women-safety/pubspec.yaml
+++ b/women-safety/pubspec.yaml
@@ -34,22 +34,33 @@ dependencies:
   flutter_sound: ^9.2.13
   permission_handler: ^10.2.0
   url_launcher: ^6.3.1
-  geolocator: ^9.0.2
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  flutter_map: ^6.1.0
-  latlong2: ^0.9.0
+  
+  
   flutter_map_heatmap: ^0.0.7
   mailer: ^6.0.1
   flutter_dotenv: ^5.2.1
   telephony: ^0.2.0
   firebase_core: ^4.4.0
-  cloud_firestore: ^6.1.2
   firebase_auth: ^6.1.4
   provider: ^6.0.0
+  sensors_plus: ^4.0.2
+  cloud_firestore: ^6.1.2
+  geolocator: ^13.0.1
+  image_picker: ^1.0.8
+  flutter_map: ^7.0.2
+  geocoding: ^3.0.0
+  latlong2: ^0.9.1
+  firebase_storage: ^13.0.6
+  uuid: ^4.4.0
+  supabase_flutter: ^2.12.0
+  http: ^1.6.0
+
 
 dev_dependencies:
   flutter_test:
@@ -73,10 +84,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
