--- a/women-safety/pubspec.yaml
+++ b/women-safety/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   uuid: ^4.4.0
   supabase_flutter: ^2.12.0
   http: ^1.6.0
+  flutter_phone_direct_caller: ^2.2.1
 
 
 dev_dependencies:
